@@ -7,7 +7,7 @@
 	<classpathentry kind="lib" path="lib/gdata-client-meta-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/gdata-contacts-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/gdata-contacts-meta-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/gdata-core-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/gdata-core-1.0.jar" sourcepath="lib/source/gdata_1.38.0_sources.jar"/>
 	<classpathentry kind="lib" path="lib/facebook-java-api-1.8-final.jar" sourcepath="lib/source/facebook-java-api-1.8-final-sources.jar"/>
 	<classpathentry kind="lib" path="lib/htmlunit-core-js-2.5.jar"/>
 	<classpathentry kind="lib" path="lib/sac-1.3.jar" sourcepath="lib/source/sac_1.3_sources.jar"/>
